Fix up compile errors and get programs compiling
`zig build --build-file ../build.zig test` now compiles however most
functionality is stubbed and needs to be filled.

Compiled programs will segfault at the moment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -486,9 +486,9 @@ set(ZIG_STD_FILES
     "os/darwin.zig"
     "os/darwin_errno.zig"
     "os/file.zig"
-    "os/freebsd.zig"
-    "os/freebsd_errno.zig"
-    "os/freebsd_x86_64.zig"
+    "os/freebsd/errno.zig"
+    "os/freebsd/index.zig"
+    "os/freebsd/x86_64.zig"
     "os/get_user_id.zig"
     "os/index.zig"
     "os/linux/errno.zig"
